force-app/main/default/objects/Investment__c/fields/Interest_Payment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Payment_End_Date__c</fullName>
    <label>Interest Payment End Date</label>
    <type>Date</type>
</CustomField>