force-app/main/default/objects/Investment__c/fields/Interest_Payment_Frequency_Type__c.field-meta.xml
<CustomField>
    <fullName>Interest_Payment_Frequency_Type__c</fullName>
    <label>Interest Payment Frequency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half yearly</fullName>
            </value>
            <value>
                <fullName>yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>