force-app/main/default/objects/Investment__c/fields/Investor_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Investor_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investor Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Investments</relationshipLabel>
    <relationshipName>Investments</relationshipName>
    <type>Lookup</type>
</CustomField>