force-app/main/default/objects/Investment__c/fields/Next_Interest_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Interest_Payment_Date__c</fullName>
    <label>Next Interest Payment Date</label>
    <type>Date</type>
</CustomField>