force-app/main/default/objects/Investment__c/fields/Principal_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Principal_Return_Date__c</fullName>
    <label>Principal Return Date</label>
    <type>Date</type>
</CustomField>