force-app/main/default/objects/Investment__c/fields/Total_Interest_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Paid__c</fullName>
    <label>Total Interest Paid</label>
    <summarizedField>Interest__c.Interest_Payment_Amount__c</summarizedField>
    <summaryForeignKey>Interest__c.Investment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>